fix: fix overflow of the home image

--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -368,6 +368,7 @@
     animation-fill-mode: forwards;
     animation: fadeIn 1.5s;
     width: 100%;
+    overflow: hidden;
   }
 
   .homeImg {
